<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_repeat"
    >
    <LinearLayout
    	android:orientation="vertical"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dip"
	    android:layout_marginBottom="5dip"
	    android:layout_marginLeft="20dip"
	    android:layout_marginRight="20dip"
	    android:gravity="center"
	    android:background="@color/white"
	    >
	    <TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="10dip"
	    	android:text="@string/game_over"
	    	android:textColor="@color/medium_blue"
	    	android:textSize="35px"
	    />
	    <TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/your_score"
	    	android:textSize="20px"
	    	android:textColor="@color/grey"
	    />
	    <TextView
	    	android:id="@+id/score"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:layout_margin="5dip"
	    	android:textColor="@color/grey"
	    	android:textSize="50px"
	    />
	</LinearLayout>
	<LinearLayout
    	android:orientation="vertical"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="5dip"
	    android:layout_marginBottom="10dip"
	    android:layout_marginLeft="20dip"
	    android:layout_marginRight="20dip"
	    android:gravity="center"
	    android:background="@color/white"
	    >
	    <TextView
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    	android:text="@string/high_scores"
	    	android:textSize="20px"
	    	android:textColor="@color/grey"
	    />
	    <LinearLayout
	    	android:id="@+id/high_score_container"
	    	android:orientation="vertical"
	    	android:layout_width="wrap_content"
	    	android:layout_height="wrap_content"
	    />
	</LinearLayout>
	<Button
		android:id="@+id/play_again_button"
	 	android:layout_width="fill_parent"
	 	android:layout_height="wrap_content"
	 	android:layout_marginLeft="80dip"
	 	android:layout_marginRight="80dip"
	 	android:textSize="20px"
	 	android:textColor="@color/dark_blue"
	 	android:text="@string/play_again" />
</LinearLayout>
