<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_repeat"
    >
    <LinearLayout
    	android:orientation="horizontal"
    	android:layout_height="wrap_content"
    	android:layout_width="fill_parent"
    	android:layout_margin="10dip" >
		<TextView
			android:id="@+id/timer"
		    android:layout_width="40px" 
		    android:layout_height="40px"
		    android:textSize="22px"
		    android:gravity="center"
		    android:textColor="@color/dark_blue"
		    android:text="@string/start_time"
		    android:background="@drawable/hourglass"
		    />
		<LinearLayout
			android:orientation="horizontal"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:gravity="right|center_vertical">
			<ImageView
				android:id="@+id/correct_marker"
				android:layout_width="20px"
				android:layout_height="20px"
				android:gravity="center"
				android:layout_marginRight="10dip" />
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="22px"
				android:gravity="right|center_vertical"
				android:textColor="@color/dark_blue"
				android:text="@string/score"
				/>
			<TextView
				android:id="@+id/score_container"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="22px"
				android:paddingLeft="10dip"
				android:textColor="@color/grey"
				android:gravity="center_vertical"
				android:text="@string/start_score"
				/>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:visibility="gone"
		android:id="@+id/tweet_question_container">
		<TextView
			android:id="@+id/tweet_container"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:minHeight="80dip"
		    android:layout_margin="10dip"
		    android:padding="10dip"
		    android:gravity="center_vertical"
		    android:background="@color/white"
		    android:textColor="@color/grey"
		    />
		<LinearLayout
			android:id="@+id/three_users_container"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@color/white"
		    	android:textColor="@color/grey"
		    	android:padding="5dip">
				<ImageView
					android:id="@+id/user1"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@color/white"
		    	android:textColor="@color/grey"
		    	android:padding="5dip">
				<ImageView
					android:id="@+id/user2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
			</LinearLayout>
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@color/white"
		    	android:textColor="@color/grey"
		    	android:padding="5dip">
				<ImageView
					android:id="@+id/user3"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
				/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_height="fill_parent"
		android:layout_width="fill_parent"
		android:visibility="gone"
		android:id="@+id/user_question_container">
		<TextView
			android:id="@+id/tweet1_container"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:minHeight="80dip"
		    android:layout_margin="10dip"
		    android:padding="10dip"
		    android:gravity="center_vertical"
		    android:background="@color/white"
		    android:textColor="@color/grey"
		    />
		<TextView
			android:id="@+id/tweet2_container"
			android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:minHeight="80dip"
		    android:layout_margin="10dip"
		    android:padding="10dip"
		    android:gravity="center_vertical"
		    android:background="@color/white"
		    android:textColor="@color/grey"
		    />
		<TextView
			android:id="@+id/tweet3_container"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content"
		    android:minHeight="80dip"
		    android:layout_margin="10dip"
		    android:padding="10dip"
		    android:gravity="center_vertical"
		    android:background="@color/white"
		    android:textColor="@color/grey"
		    />
		<LinearLayout
			android:id="@+id/one_user_container"
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal">
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:background="@color/white"
		    	android:textColor="@color/grey"
		    	android:padding="5dip">
				<ImageView
					android:id="@+id/user"
					android:layout_height="wrap_content"
					android:layout_width="wrap_content"
				/>
			</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</LinearLayout>
